# qmmp-v2m

./: .gitignore  AUTHORS  README  README.md  archivereader.cpp  decoderv2mfactory.cpp  decoderv2mfactory.h  libv2.h  sounddef.cpp  synth.h  synth_core.cpp  types.h  v2m.pro  v2mconv.cpp  v2mhelper.cpp  v2mplayer.cpp  v2mplayer.h
common/: common.pri  stdio_meta_type.h
libv2m/: CMakeLists.txt  sounddef.cpp  sounddef.h  v2mconv.cpp  v2mconv.h  v2mplayer.cpp  v2mplayer.h
